# Xoaypdf

./: CMakeLists.txt  XoayPDF.cpp
.github/workflows/: build-cpp.yml
