cmake_minimum_required(VERSION 3.21)
cmake_policy(SET CMP0091 NEW)
project(XoayPDF CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

# Tro thang vao thu muc RELEASE cua vcpkg (tranh vo nham lib debug MTd)
if(DEFINED ENV{VCPKG_INSTALLATION_ROOT})
  file(TO_CMAKE_PATH "$ENV{VCPKG_INSTALLATION_ROOT}" VCPKG_ROOT)
else()
  set(VCPKG_ROOT "C:/vcpkg")
endif()
set(VC_DIR "${VCPKG_ROOT}/installed/x64-windows-static")

file(GLOB VCPKG_ALL_LIBS "${VC_DIR}/lib/*.lib")
message(STATUS "Include dir: ${VC_DIR}/include")
message(STATUS "Libs se link: ${VCPKG_ALL_LIBS}")

add_executable(XoayPDF XoayPDF.cpp)
target_include_directories(XoayPDF PRIVATE "${VC_DIR}/include")
target_compile_options(XoayPDF PRIVATE /utf-8 /EHsc)
target_compile_definitions(XoayPDF PRIVATE WIN32_LEAN_AND_MEAN NOMINMAX POINTERHOLDER_TRANSITION=0)
target_link_libraries(XoayPDF PRIVATE ${VCPKG_ALL_LIBS} WindowsApp.lib)
